chore(nbt): Remove examination, fix module exports and record-ify everything